--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -4,7 +4,6 @@
               android:layout_width="fill_parent"
               android:layout_height="fill_parent"
               android:id="@+id/index"
-
         >
 
     <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -18,6 +17,7 @@
                 android:layout_width="match_parent"
                 android:gravity="center|top"
                 android:layout_weight="5"
+                android:id="@+id/mainTL"
                 android:layout_height="match_parent" android:paddingTop="100dp">
             <TableRow
                     android:layout_height="wrap_content"
@@ -42,7 +42,7 @@
                         android:textAppearance="?android:attr/textAppearanceLarge"
                         android:text="知人面更知人心"
                         android:id="@+id/indexSecTip" android:layout_gravity="center_horizontal"
-                        android:textSize="20dp"/>
+                        android:textSize="30dp"/>
             </TableRow>
 
             <TableRow
@@ -54,9 +54,34 @@
                         android:layout_height="wrap_content"
                         android:id="@+id/indexInput" android:layout_gravity="center_horizontal"
                         android:background="@drawable/rectborder"
+                        android:singleLine="true"
                         android:hint="输入自己或者好友的手机号，可以查看身边人给出的评价"
                         android:paddingLeft="10dp" android:paddingTop="10dp" android:paddingRight="10dp"
-                        android:paddingBottom="10dp" android:textColor="#ffff1a0c"/>
+                        android:paddingBottom="10dp" android:textColor="#ffff1a0c" />
+            </TableRow>
+
+            <TableRow android:weightSum="9" android:orientation="horizontal">
+
+                <Button
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="3"
+                        android:text="我"
+                        android:id="@+id/meBtn"/>
+                <Button
+                        style="?android:attr/buttonStyleSmall"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="3"
+                        android:text="最近联系人"
+                        android:id="@+id/recentBtn"/>
+                <Button
+                        style="?android:attr/buttonStyleSmall"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="3"
+                        android:text="全部联系人"
+                        android:id="@+id/allBtn"/>
             </TableRow>
             <TableRow
                     android:layout_width="wrap_content"
@@ -79,7 +104,6 @@
                 <!--android:layout_height="500px"-->
                 <!--android:layout_width="fill_parent"-->
                 <!--/>-->
-
 
         <WebView
                 android:layout_width="match_parent"
